tests/ui/coherence/orphan-check-error-reporting-ty-var.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/orphan-check-error-reporting-ty-var.rs:14:1
   |
LL | impl<K2> From<Vec<K2>> for <Vec<K2> as MyTrait>::Item {}
   | ^^^^^^^^^-------------^^^^^--------------------------
   |          |                 |
   |          |                 `Vec` is not defined in the current crate
   |          `Vec` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0117`.
